# uniprot-link

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  MCP-TEST-REPORT.md  Makefile  README.md  container-release.json  mcp_server.py  pyproject.toml  server.py  uniprot-link-mcp-assessment.md
.claude/skills/ci-failure-triage/: SKILL.md
.claude/skills/code-quality-review/: SKILL.md
.claude/skills/dependency-cve-sweep/: SKILL.md
.claude/skills/fastapi-route-change/: SKILL.md
.claude/skills/fleet-standard-adoption/: SKILL.md
.claude/skills/mcp-tool-change/: SKILL.md
.claude/skills/release-readiness/: SKILL.md
.claude/skills/security-review/: SKILL.md
.github/workflows/: ci.yml  conformance.yml  container-ci.yml  container-release.yml  container-security.yml  ghcr-bootstrap.yml  integration.yml  security.yml
docker/: Dockerfile  README.md  docker-compose.npm.yml  docker-compose.prod.yml  docker-compose.yml
docs/: architecture.md  configuration.md  deployment.md  development.md  mcp-assessment-v0.4.0.md  mcp-assessment-v0.5.0-consumer-session.md  mcp-assessment-v0.5.0.md  mcp-assessment-v0.6.0-closure.md  mcp-assessment-v0.7.0-closure.md  mcp-assessment-v0.7.0-tester.md  mcp-assessment-v0.8.0-closure.md  mcp-assessment-v0.8.0-consumer-tester.md  mcp-assessment-v0.9.0-closure.md  mcp-assessment.md  usage.md
docs/superpowers/plans/: 2026-06-11-mcp-quality-uplift.md  2026-06-12-arg-contract-discoverability.md  2026-06-12-deploy-verify-and-v0.3.0.md  2026-06-12-mcp-assessment-uplift-v0.5.0.md  2026-06-12-mcp-assessment-uplift-v0.6.0.md  2026-06-12-mcp-v0.4.0-9.5-uplift.md  2026-06-12-v0.9.0-assessment-remediation.md
docs/superpowers/specs/: 2026-06-11-mcp-quality-uplift-design.md  2026-06-11-uniprot-link-design.md  2026-06-12-arg-contract-discoverability-design.md  2026-06-12-assessment-review-and-v0.3.0-spec.md  2026-06-12-mcp-assessment-uplift-v0.5.0-design.md  2026-06-12-mcp-assessment-uplift-v0.6.0-design.md  2026-06-12-mcp-v0.4.0-9.5-uplift-design.md  2026-06-12-mcp-v0.8.0-uplift-design.md  2026-06-12-v0.9.0-assessment-remediation-design.md
research/: self_test_pnkp.py  verify_queries.py
research/playwright/: package.json  probe.mjs
scripts/: check_deployed_version.py  check_file_size.py  check_readme.py
tests/: conftest.py
tests/conformance/: behaviour.py  conformance.py  conftest.py  contract_truth.py  contract_truth.sha256  test_behaviour_v1.py  test_contract_truth_v1.py  test_http_policy_v1.py  test_transport_mode.py  test_transport_v1.py
tests/integration/: test_live.py
tests/unit/: test_arg_help.py  test_arg_middleware.py  test_buildinfo.py  test_capabilities.py  test_cli.py  test_client.py  test_discovery_surface.py  test_docker_compose_loopback.py  test_dockerfile_bootstrap.py  test_docs_facts.py  test_exceptions.py  test_health.py  test_host_origin_guard.py  test_iri_injection.py  test_middleware.py  test_next_commands.py  test_queries.py  test_readme_tools.py  test_response_envelope_v1.py  test_service_and_tools.py  test_shaping.py  test_structured_output.py  test_tool_names.py  test_version_single_source.py
tests/unit/mcp/: test_error_leak_fencing.py  test_error_sanitation.py  test_log_filters.py  test_notfound_guard.py  test_untrusted_content.py  test_untrusted_content_fencing.py
uniprot_link/: __init__.py  app.py  buildinfo.py  cli.py  config.py  exceptions.py  logging_config.py  server_manager.py
uniprot_link/api/: __init__.py  client.py  url_guard.py
uniprot_link/mcp/: __init__.py  annotations.py  arg_help.py  capabilities.py  envelope.py  facade.py  log_filters.py  middleware.py  next_commands.py  notfound_guard.py  resources.py  schemas.py  service_adapters.py  untrusted_content.py
uniprot_link/mcp/tools/: __init__.py  discovery.py  proteins.py  query.py  taxonomy.py
uniprot_link/services/: __init__.py  constants.py  queries.py  service_base.py  service_find.py  service_taxonomy.py  shaping.py  shaping_annotations.py  shaping_taxonomy.py  sparql_service.py
uniprot_link/services/queries/: __init__.py  examples.py  proteins.py  taxonomy.py  validation.py
